--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-hello world
+<html>
+  hello world
+  <head>
+    <title>Pagina web che forse funziona</title>  
+  </head>
+  
+  <body>
+    <h1 color:red>Questo e' una frase</h1>
+    <p color:green>paragrafo in verde</p>
+    <p><b>paragrafo cicciotto</b></p>
+  </body>
+  
+  
+</html>
+
