--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <body>
-    <h1 color=red>Questo e' una frase</h1>
-    <p color=green>paragrafo in verde</p>
+    <h1 color="red">Questo e' una frase</h1>
+    <p color="green">paragrafo in verde</p>
     <p><b>paragrafo cicciotto</b></p>
   </body>
   
