--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <body>
-    <h1 color="red">Questo e' una frase</h1>
-    <p color="green">paragrafo in verde</p>
+    <h1 color="#ffff00">Questo e' una frase</h1>
+    <p color="#f3f3f3">paragrafo in verde</p>
     <p><b>paragrafo cicciotto</b></p>
     <h3>  sn io</h3>
   </body>
