--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   
   <body>
-    <h1><font color="red>"Questo e' una frase</font></h1>
-    <p><font color="green>paragrafo in verde</font></p>
+    <h1><font color="red">Questo e' una frase</font></h1>
+    <p><font color="green">paragrafo in verde</font></p>
     <p><b>paragrafo cicciotto</b></p>
     <h3>  sn io</h3>
   </body>
